# prompt_basic

./: .langchain_cache.db  1.환경설정.ipynb  2.모델성능테스트.ipynb  3.langchain_basic.ipynb  4.langchain_template.ipynb  5.langchain_parser.ipynb  pyproject.toml
